working with sequelize
