# src/handlers/organization.ts
@@ -1,53 +1,61 @@
-import { TableClient } from "@azure/data-tables";
 import { WithinRangeString } from "@pagopa/ts-commons/lib/strings";
 import { withDefault } from "@pagopa/ts-commons/lib/types";
 import { FastifyReply, FastifyRequest } from "fastify";
 import { pipe } from "fp-ts/lib/function";
-import { IncomingMessage, Server } from "http";
+import { IncomingMessage, Server, ServerResponse } from "http";
 import * as t from "io-ts";
 import * as TE from "fp-ts/TaskEither";
 import { KeyOrganizationFiscalCode } from "../../generated/definitions/KeyOrganizationFiscalCode";
 import { OrganizationWithReferents } from "../../generated/definitions/OrganizationWithReferents";
-import { getOrganizations } from "../services/organizationService";
-import { toFastifyReply, toInternalServerError } from "../utils/response";
+import {
+  getOrganizations,
+  upsertOrganization,
+} from "../services/organizationService";
+import {
+  toFastifyReply,
+  toInternalServerError,
+  toSuccessFastifyReply,
+  toSuccessJsonResponse,
+} from "../utils/response";
+import { RouteGenericInterface } from "fastify/types/route";
+import { Organizations } from "../../generated/definitions/Organizations";
 
 export const IGetOrganizationsQueryString = t.partial({
   page: withDefault(t.number, 0),
   pageSize: withDefault(t.number, 20),
-  organizationFiscalCode: WithinRangeString(8, 16),
-  organizationName: WithinRangeString(1, 100),
+  searchQuery: WithinRangeString(1, 100),
 });
 
 export type IGetOrganizationsQueryString = t.TypeOf<
   typeof IGetOrganizationsQueryString
 >;
 
-export const getOrganizationsHandler = (
-  organizationsTableClient: TableClient
-) => async (
+export const getOrganizationsHandler = () => async (
   request: FastifyRequest<
-    { Querystring: IGetOrganizationsQueryString },
+    { Querystring: IGetOrganizationsQueryString; Response: Organizations },
     Server,
     IncomingMessage
   >,
-  reply: FastifyReply
+  reply: FastifyReply<
+    Server,
+    IncomingMessage,
+    ServerResponse,
+    RouteGenericInterface,
+    unknown
+  >
 ) =>
   pipe(
     getOrganizations(
-      organizationsTableClient,
       request.query.page,
       request.query.pageSize,
-      request.query.organizationFiscalCode,
-      request.query.organizationName
+      request.query.searchQuery
     ),
     TE.mapLeft(toInternalServerError),
-    TE.bimap(toFastifyReply(reply), reply.code(200).send),
+    TE.bimap(toFastifyReply(reply), toSuccessFastifyReply(reply)),
     TE.toUnion
-  );
+  )();
 
-export const upsertOrganizationHandler = (
-  organizationsTableClient: TableClient
-) => async (
+export const upsertOrganizationHandler = () => async (
   request: FastifyRequest<
     {
       Body: OrganizationWithReferents;
@@ -56,13 +64,15 @@ export const upsertOrganizationHandler = (
     IncomingMessage
   >,
   reply: FastifyReply
-) => {
-  const body = request.body;
-};
+) =>
+  pipe(
+    upsertOrganization(request.body),
+    TE.mapLeft(toInternalServerError),
+    TE.bimap(toFastifyReply(reply), toSuccessFastifyReply(reply)),
+    TE.toUnion
+  )();
 
-export const getOrganizationHandler = (
-  organizationsTableClient: TableClient
-) => async (
+export const getOrganizationHandler = () => async (
   request: FastifyRequest<
     {
       Params: KeyOrganizationFiscalCode;
@@ -75,9 +85,7 @@ export const getOrganizationHandler = (
   const keyOrganizationFiscalCode = request.params.keyOrganizationFiscalCode;
 };
 
-export const deleteOrganizationHandler = (
-  organizationsTableClient: TableClient
-) => async (
+export const deleteOrganizationHandler = () => async (
   request: FastifyRequest<
     {
       Params: KeyOrganizationFiscalCode;
